--- a/package.json
+++ b/package.json
@@ -4,8 +4,12 @@
   "description": "project manager",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./servers/index.js",
-    "build": "webpack"
+    "dev": "cross-env NODE_ENV=development nodemon ./server/server.dev.js ",
+    "build": "npm run clean && cross-env NODE_ENV=production webpack --config ./build/webpack.prod.config.js --progress",
+    "clean": "rimraf ./dist/client/* && rimraf ./dist/server/* && rimraf ./views/prod/*",
+    "lint": "eslint . --ext .js",
+    "start": "node ./dist/server/server.js",
+    "pm2": "pm2"
   },
   "repository": {
     "type": "git",
@@ -18,48 +22,66 @@
   },
   "homepage": "https://github.com/luckydwj/yc-project#readme",
   "dependencies": {
-    "antd": "^3.6.4",
-    "css-loader": "^0.28.11",
-    "ejs": "^2.6.1",
-    "extract-text-webpack-plugin": "^3.0.2",
-    "koa": "^2.5.1",
+    "antd": "^3.6.5",
+    "ejs": "^2.5.5",
+    "koa": "^2.0.0",
+    "koa-bodyparser": "^3.2.0",
+    "koa-compose": "^3.2.0",
+    "koa-compress": "^2.0.0",
     "koa-convert": "^1.2.0",
-    "koa-static": "^5.0.0",
-    "koa-views": "^6.1.4",
+    "koa-json": "^2.0.0",
+    "koa-logger": "^2.0.0",
+    "koa-router": "^7.0.0",
+    "koa-session": "^3.4.0",
+    "koa-static": "^3.0.0",
+    "koa-views": "^5.0.0",
+    "pm2": "^2.2.2",
     "react": "^15.3.1",
     "react-dom": "^15.3.1",
-    "react-redux": "^5.0.7",
+    "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
-    "redux": "^4.0.0",
-    "style-loader": "^0.21.0",
-    "webpack": "^3.5.5"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0",
+    "superagent": "^3.3.1"
   },
   "devDependencies": {
-    "babel-core": "^6.26.3",
-    "babel-loader": "^7.1.4",
-    "babel-plugin-react-transform": "^2.0.2",
-    "babel-plugin-transform-decorators-legacy": "^1.3.4",
-    "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "babel-preset-stage-0": "^6.24.1",
-    "babel-preset-stage-1": "^6.24.1",
-    "babel-preset-stage-2": "^6.24.1",
-    "babel-preset-stage-3": "^6.24.1",
-    "clean-webpack-plugin": "^0.1.19",
-    "html-loader": "^0.5.5",
-    "html-webpack-plugin": "^2.30.1",
-    "koa-logger": "^3.2.0",
-    "koa-router": "^7.4.0",
-    "koa-webpack-dev-middleware": "^2.0.2",
+    "asset-require-hook": "^1.0.2",
+    "autoprefixer": "^6.4.1",
+    "babel-core": "^6.13.2",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.4",
+    "babel-plugin-add-module-exports": "^0.2.1",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "^6.13.0",
+    "babel-preset-es2015": "^6.13.2",
+    "babel-preset-react": "^6.11.1",
+    "babel-preset-react-hmre": "^1.1.1",
+    "babel-preset-stage-0": "^6.16.0",
+    "babel-register": "^6.18.0",
+    "cross-env": "^3.1.3",
+    "css-loader": "^0.26.0",
+    "css-modules-require-hook": "^4.0.5",
+    "eslint": "^3.12.2",
+    "eslint-plugin-react": "^6.8.0",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.10.1",
+    "html-loader": "^0.4.4",
+    "html-webpack-plugin": "^2.24.1",
+    "json-loader": "^0.5.4",
+    "koa-webpack-dev-middleware": "^1.3.0",
     "koa-webpack-hot-middleware": "^1.0.3",
-    "less-loader": "^4.1.0",
-    "nodemon": "^1.17.5",
-    "progress-bar-webpack-plugin": "^1.11.0",
-    "react-hot-loader": "^4.3.3",
-    "redux-logger": "^3.0.6",
-    "webpack-merge": "^4.1.3"
+    "node-sass": "^4.1.1",
+    "nodemon": "^1.11.0",
+    "postcss-loader": "^1.2.1",
+    "progress-bar-webpack-plugin": "^1.9.0",
+    "redux-devtools": "^3.3.1",
+    "redux-devtools-dock-monitor": "^1.1.1",
+    "redux-devtools-log-monitor": "^1.1.1",
+    "rimraf": "^2.5.4",
+    "sass-loader": "^4.0.1",
+    "source-map-support": "^0.4.10",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.1"
   }
 }
