--- a/package.json
+++ b/package.json
@@ -22,9 +22,10 @@
   },
   "homepage": "https://github.com/luckydwj/yc-project#readme",
   "dependencies": {
-    "antd": "^3.6.5",
+    "antd": "^3.6.3",
+    "babel-runtime": "^6.26.0",
     "ejs": "^2.5.5",
-    "koa": "^2.0.0",
+    "koa": "^2.5.1",
     "koa-bodyparser": "^3.2.0",
     "koa-compose": "^3.2.0",
     "koa-compress": "^2.0.0",
@@ -36,43 +37,51 @@
     "koa-static": "^3.0.0",
     "koa-views": "^5.0.0",
     "pm2": "^2.2.2",
-    "react": "^15.3.1",
-    "react-dom": "^15.3.1",
+    "react": "^16.4.1",
+    "react-dom": "^16.4.1",
     "react-redux": "^5.0.1",
     "react-router": "^3.0.0",
     "redux": "^3.6.0",
+    "redux-immutable": "^4.0.0",
     "redux-thunk": "^2.1.0",
     "superagent": "^3.3.1"
   },
   "devDependencies": {
     "asset-require-hook": "^1.0.2",
     "autoprefixer": "^6.4.1",
-    "babel-core": "^6.13.2",
-    "babel-eslint": "^7.1.1",
-    "babel-loader": "^6.2.4",
+    "babel-cli": "^6.26.0",
+    "babel-core": "^6.26.3",
+    "babel-loader": "^7.1.4",
     "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-transform-runtime": "^6.15.0",
-    "babel-polyfill": "^6.13.0",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.16.0",
-    "babel-register": "^6.18.0",
+    "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "babel-preset-stage-1": "^6.24.1",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-preset-stage-3": "^6.24.1",
+    "babel-register": "^6.26.0",
     "cross-env": "^3.1.3",
-    "css-loader": "^0.26.0",
+    "css-loader": "^0.26.4",
     "css-modules-require-hook": "^4.0.5",
     "eslint": "^3.12.2",
     "eslint-plugin-react": "^6.8.0",
-    "extract-text-webpack-plugin": "^1.0.1",
+    "extract-text-webpack-plugin": "^3.0.2",
     "file-loader": "^0.10.1",
     "html-loader": "^0.4.4",
     "html-webpack-plugin": "^2.24.1",
     "json-loader": "^0.5.4",
     "koa-webpack-dev-middleware": "^1.3.0",
     "koa-webpack-hot-middleware": "^1.0.3",
+    "less": "^3.0.4",
+    "less-loader": "^4.1.0",
     "node-sass": "^4.1.1",
     "nodemon": "^1.11.0",
-    "postcss-loader": "^1.2.1",
+    "postcss-less": "^2.0.0",
+    "postcss-loader": "^1.3.3",
     "progress-bar-webpack-plugin": "^1.9.0",
     "redux-devtools": "^3.3.1",
     "redux-devtools-dock-monitor": "^1.1.1",
@@ -80,8 +89,8 @@
     "rimraf": "^2.5.4",
     "sass-loader": "^4.0.1",
     "source-map-support": "^0.4.10",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.1"
+    "style-loader": "^0.13.2",
+    "url-loader": "^0.5.9",
+    "webpack": "^3.5.5"
   }
 }
