模块化 transform-decorators-legacy 编译 高阶函数

--- a/.babelrc
+++ b/.babelrc
@@ -33,6 +33,7 @@
         "moduleName": "babel-runtime"
       }
     ],
-    "add-module-exports"
+    "add-module-exports",
+    "transform-decorators-legacy"
   ]
 }
